--- a/calc/src/Ui/Global.module.css
+++ b/calc/src/Ui/Global.module.css
@@ -18,9 +18,11 @@
     height: 10%;
     margin-left: 10%;
     border-radius: 8px;
-    font-size: 2rem;
-    color: white;
-    background-color: rgb(136, 134, 152);
+    font-size: 2.5rem;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+    background-color: rgb(196, 193, 217);
 }
 .numberCard{
     width: 80%;
